--- a/Assignment1.Rmd
+++ b/Assignment1.Rmd
@@ -1,6 +1,11 @@
-Assignment 
-Homework 1 Exercises
 ---
+Title: STA3001 Homework 1
+Author: Zane Yee Sun
+ID: 12440004
+output: pdf_document
+---
+```{r setup, include = FALSE}
+```
 Q2.1
 (a)
 ```{r}
@@ -9,6 +14,7 @@ qnorm(0.95, mean=10, sd=3)
 # 99th percentile
 qnorm(0.99, mean=10, sd=3)
 ```
+Q2.1
 (b)
 ```{r}
 # 95th percentile of the t-distribution with 10 degrees of freedom
@@ -20,6 +26,7 @@ qt(0.95, df=25)
 # 99th percentile of the t-distribution with 25 degrees of freedom
 qt(0.99, df=25)
 ```
+Q2.1
 (c)
 ```{r}
 # 95th percentile of the chi-squared distribution with 1 degrees of freedom
@@ -37,6 +44,7 @@ qchisq(0.95, df=10)
 # 99th percentile of the chi-squared distribution with 10 degrees of freedom
 qchisq(0.99, df=10)
 ```
+Q2.1
 (d)
 ```{r}
 # 95th percentile of the F-distribution with 2 and 10 degrees of freedom
@@ -49,7 +57,6 @@ qf(0.95, df1=4, df2=10)
 # 99th percentile of the F-distribution with 4 and 10 degrees of freedom
 qf(0.99, df1=4, df2=10)
 ```
----
 Q2.2
 (a)
 ```{r}
@@ -80,6 +87,9 @@ We can see from the following results that:
 
 3. the 97.5th percentile of the chi-squared distribution is equal to the 98.75th percentile of the square of the standard normal distribution.
 
+```{r}
+```
+Q2.2
 (b)
 ```{r}
 v1 <- 1
@@ -111,6 +121,120 @@ We can see from the following results that:
 
 3. the 97.5th percentile of the F distribution (1, v2) is equal to the 98.75th percentile of the square of the t distribution (v2).
 ```{r}
-qnorm(0.95, mean = 0, sd=1)^2
-qnorm(0.975, mean = 0, sd=1)
+```
+Q2.4
+(a)
+```{r}
+weekof <- c("January 30", "June 39", "March 2", "October 26", "February 7")
+no_of_cars_sold_y <- c(20, 18, 10, 6, 11)
+ave_no_of_salesppl_x <- c(6, 6, 4, 2, 3)
+
+# create matrix with the data
+data <- cbind(weekof, no_of_cars_sold_y, ave_no_of_salesppl_x)
+
+# create data frame
+df <- as.data.frame(data)
+transform(df, no_of_cars_sold_y = as.numeric(no_of_cars_sold_y), ave_no_of_salesppl_x = as.numeric(ave_no_of_salesppl_x))
+
+# construct scatterplot of y against x, where y is the number of cars sold and x is the average number of salespeople
+plot(ave_no_of_salesppl_x, no_of_cars_sold_y, xlab="Ave # of salespeople", ylab="# of cars sold", main="Scatterplot of # of cars sold against ave # of salespeople")
+```
+Q2.4
+(b)
+```{r}
+# estimate intercept using Method of least squares
+xbar = mean(ave_no_of_salesppl_x)
+ybar = mean(no_of_cars_sold_y)
+b1 = sum((ave_no_of_salesppl_x - xbar) * (no_of_cars_sold_y - ybar)) / sum((ave_no_of_salesppl_x - xbar)^2)
+b0 = ybar - b1 * xbar
+cat("The estimated intercept:", b0, "\n")
+cat("The estimated slope of the least squares line:", b1, "\n")
+
+# check using built in function 'lm'
+model <- lm(no_of_cars_sold_y ~ ave_no_of_salesppl_x)
+
+# print the summary of the model
+summary(model)
+```
+Q2.4
+(c)
+```{r}
+# plot the least squares line
+plot(ave_no_of_salesppl_x, no_of_cars_sold_y, xlab="Ave # of salespeople", ylab="# of cars sold", main="Scatterplot of # of cars sold against ave # of salespeople")
+abline(model, col="red")
+```
+Q2.4
+(d)
+```{r}
+# estimate the number of cars sold when the average number of salespeople is 5
+x = 5
+y = b0 + b1 * x
+cat("The estimated number of cars sold when the average number of salespeople is 5:", y, "\n")
+```
+Q2.4
+(e)
+```{r}
+# Calculate the fitted values mu_hat for each observed value of x
+mu_hat = b0 + b1 * ave_no_of_salesppl_x
+
+# Calculate the residuals e_i for each observed value of x
+e_i = no_of_cars_sold_y - mu_hat
+
+# Plot the residuals against the fitted values
+plot(mu_hat, e_i, xlab="Fitted values", ylab="Residuals", main="Residuals against Fitted values")
+
+```
+Q2.4
+(f)
+```{r}
+# Calculate manually an estimate of the variance sigma square
+n = length(no_of_cars_sold_y)
+rss = sum(e_i^2)
+estimate_variance = rss / (n - 2)
+cat("The estimated variance:", estimate_variance, "\n")
+```
+```{r}
+```
+Q2.6
+(a)
+```{r}
+# import data
+q6data = read.table(file='hooker.txt', header = T)
+q6data
+```
+```{r}
+# Plot TEMP against AP, where BT is the temperature and AP is the air pressure
+plot(q6data$AP, q6data$BT, xlab="AP", ylab="TEMP", main="Scatterplot of TEMP against AP")
+```
+- A Linear model seems appropriate as the relationship between TEMP and AP seems to be linear.
+
+Q2.6
+(b)
+```{r}
+x = 100 * log(q6data$AP, base = exp(1))
+
+# plot the scatterplot of TEMP against x
+plot(x, q6data$BT, xlab="100 * ln(AP)", ylab="TEMP", main="Scatterplot of TEMP against 100 * ln(AP)")
+```
+Q2.6
+(c)
+```{r}
+xbar = mean(q6data$AP)
+ybar = mean(q6data$BT)
+b1 = sum((q6data$AP - xbar) * (q6data$BT - ybar)) / sum((q6data$AP - xbar)^2)
+b0 = ybar - b1 * xbar
+cat("The estimated intercept:", b0, "\n")
+cat("The estimated slope:", b1, "\n")
+
+# check using built in function 'lm'
+q6model <- lm(q6data$BT ~ q6data$AP)
+
+# print the summary of the model
+summary(q6model)
+
+```
+```{r}
+# plot the least squares line
+plot(q6data$AP, q6data$BT, xlab="AP", ylab="TEMP", main="Scatterplot of TEMP against AP")
+abline(q6model, col="red")
 ```
