--- a/Homework 2/Assignment2.Rmd
+++ b/Homework 2/Assignment2.Rmd
@@ -68,7 +68,7 @@ Since the p-value = 0.000156 < 0.05, we reject the null hypothesis that the slop
 ---
 #### (b)
 ```{r}
-# Manually calculate the 95% confidence interval for the regression coefficient of the number of cars sold
+# 95% confidence interval for the regression coefficient of the number of cars sold
 n <- length(cars_sold)
 alpha <- 0.05
 t <- qt(1-alpha/2, df = n-2)
@@ -82,8 +82,27 @@ CI <- c(beta_1 - t * SE, beta_1 + t * SE)
 cat("95% confidence interval for beta_1 is: ", CI)
 ```
 ```{r}
-# Obtain the 95% confidence interval for the regression coefficient of the number of cars sold using confint()
+# Checking the 95% confidence interval using confint()
 confint(fit, level = 0.95)
+```
+#### (c)
+```{r}
+# 90% confidence interval for the regression coefficient of the numbers of cars sold
+alpha <- 0.1
+t <- qt(1-alpha/2, df = n-2)
+SE <- sqrt(sum((revenue - beta_0 - beta_1 * cars_sold)^2) / (n-2)) / sqrt(Sxx)
+CI <- c(beta_1 - t * SE, beta_1 + t * SE)
+cat("90% confidence interval for beta_1 is: ", CI)
+```
+```{r}
+# Check again using confint()
+confint(fit, level = 0.90)
+```
+#### (d)
+```{r}
+# get the coefficent of determination
+R2 <- summary(fit)$r.squared
+cat("The coefficient of determination is: ", R2)
 ```
 
 
